# project-ether

./: README.md
app/ether/: CMakeLists.txt
app/ether/inc/: bme280.h  ether.h  i2c_controller.h  mqtt_controller.h  pms7003.h  state_machine.h  uart_controller.h  wifi_controller.h
app/ether/main/: CMakeLists.txt  ether_main.c
app/ether/src/: bme280.c  ether.c  i2c_controller.c  mqtt_controller.c  pms7003.c  state_machine.c  uart_controller.c  wifi_controller.c
hardware/: esp32-eter.kicad_pcb  esp32-eter.kicad_pro  esp32-eter.kicad_sch
hardware/manufacturing/: esp32-eter-B_Cu.gbr  esp32-eter-B_Silkscreen.gbr  esp32-eter-Edge_Cuts.gbr  esp32-eter-F_Cu.gbr  esp32-eter-NPTH.drl
hardware/manufacturing/v1/: esp32-eter-B_Cu.gbr  esp32-eter-B_Mask.gbr  esp32-eter-B_Paste.gbr  esp32-eter-B_Silkscreen.gbr  esp32-eter-Edge_Cuts.gbr  esp32-eter-F_Cu.gbr  esp32-eter-F_Mask.gbr  esp32-eter-F_Paste.gbr  esp32-eter-F_Silkscreen.gbr  esp32-eter-In1_Cu.gbr  esp32-eter-In2_Cu.gbr  esp32-eter-NPTH.drl  esp32-eter-PTH.drl  esp32-eter-job.gbrjob
hardware/manufacturing/v2/: esp32-eter-B_Cu.gbr  esp32-eter-B_Mask.gbr  esp32-eter-B_Paste.gbr  esp32-eter-B_Silkscreen.gbr  esp32-eter-Edge_Cuts.gbr  esp32-eter-F_Cu.gbr  esp32-eter-F_Mask.gbr  esp32-eter-F_Paste.gbr  esp32-eter-F_Silkscreen.gbr  esp32-eter-In1_Cu.gbr  esp32-eter-In2_Cu.gbr  esp32-eter-NPTH.drl  esp32-eter-PTH.drl  esp32-eter-job.gbrjob
hardware/manufacturing/v3/: esp32-eter-B_Mask.gbr  esp32-eter-B_Paste.gbr  esp32-eter-F_Mask.gbr  esp32-eter-F_Paste.gbr  esp32-eter-F_Silkscreen.gbr  esp32-eter-In1_Cu.gbr  (+3 more)
(+51 files in other folders)
